# Odoo-Operator

./: .gitignore  README.md  request.json
HELM/: values.yaml
HELM/templates/: crd.yaml  deployment.yaml  object.yaml  rbac.yaml
Opreator/: .env  .local.env  .pylintrc  Dockerfile  gunicorn_conf.py  pyproject.toml  run_server.py  start_script.sh
Opreator/app/: main.py
Opreator/app/api/default/: api.py
Opreator/app/api/default/endpoints/: chart.py
Opreator/app/schemas/: base.py
Opreator/app/services/: pods_service.py
Opreator/app/utils/: config.py
Opreator/odoo_operator/: cli.py  const.py  create_crd.py  delete_crd.py  edit_crd.py  load_crd.py  operators.py
Opreator/odoo_operator/mychart/: Chart.yaml  values.yaml
Opreator/odoo_operator/mychart/templates/: _helpers.tpl  deployment.yaml  pv.yaml  svc.yaml
