[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Ahmed KHALED <ahmed24khaled@gmail.com>"]

[[tool.poetry.source]]
name = "mongoengine"
url = "https://gitlab.com/api/v4/projects/19389484/packages/pypi/simple"

[[tool.poetry.source]]
name = "fastapi-extra"
url = "https://gitlab.com/api/v4/projects/19896219/packages/pypi/simple"

[[tool.poetry.source]]
name = "ipomm-commons"
url = "https://gitlab.com/api/v4/projects/20972351/packages/pypi/simple"

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "^0.11.3"
fastapi = "^0.58.0"
python-multipart = "^0.0.5"
requests = "^2.23.0"
passlib = {extras = ["bcrypt"], version = "^1.7.2"}
gunicorn = "^20.0.4"
tenacity = ""
python-jose = "^3.1.0"
pydantic = {extras = ["email"], version = "^1.5.1"}
pycryptodome = "^3.9.8"
pyhumps = "3.0.2"
python-dotenv = "^0.13.0"
typing_extensions = "^3.7.4"
ipomm-commons = {version = "0.1.33", source = "ipomm-commons"}
"ruamel.yaml" = "^0.17.21"
pyyaml = "^6.0"
sh = "^1.14.3"
pyqt5 = "^5.15.7"



[tool.poetry.dev-dependencies]
invoke = "^1.4.1"
black = "^20.8b1"
flake8 = "^3.8.3"
pytest = "^5.4.3"
pytest-cov = "^2.10.0"
pytest-benchmark = "^3.2.3"
pytest-dotenv = "^0.5.2"
mongomock = "^3.19.0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

